<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">File dialog</string>
    <string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <color name="gray">#ffff0000</color>
    <string name="err">Error</string>
    <string name="delete">Delete</string>
    <string name="delete_multi">Delete (%d)</string>
    <string name="dialogProcessing">Processing…</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_empty">Name cannot be empty</string>
    <string name="dialog_ok">OK</string>
    <string name="donate_text">Donate</string>
    <string name="donate_thank">Thanks!</string>
    <string name="donate_thank_text">Thank you for your donation!</string>
    <string name="dontShowMore">Don\'t show more</string>
    <string name="error_add">Cannot add file:</string>
    <string name="error_add_exist">File with this name already exist:</string>
    <string name="error_do">Cannot do this:</string>
    <string name="error_find">Cannot find DIR file:</string>
    <string name="error_open">Cannot open DIR file:</string>
    <string name="error_replace">Cannot replace:</string>
    <string name="error_replace_big">File size is too big</string>
    <string name="extract">Extract</string>
    <string name="extract_multi">Extract (%d)</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="firebase_database_url">https://gtaimgtool-21668.firebaseio.com</string>
    <string name="firstOpenImg">First open IMG file</string>
    <string name="gcm_defaultSenderId">255194513806</string>
    <string name="google_api_key">AIzaSyBAAoT1z1JifytAoY0bN6-IVWGKJPe8gkI</string>
    <string name="google_app_id">1:255194513806:android:d8cdce96835fbaed</string>
    <string name="google_crash_reporting_api_key">AIzaSyBAAoT1z1JifytAoY0bN6-IVWGKJPe8gkI</string>
    <string name="google_storage_bucket">gtaimgtool-21668.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="lastChangesTitle">Last changes</string>
    <string name="maxCancel">Cancel</string>
    <string name="maxOk">Add</string>
    <string name="max_dialog_name">Too long filename</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="no_space">Not enough free space</string>
    <string name="no_space_text">You\'ll need at least %d Mb of free space</string>
    <string name="openImg">Open MTK</string>
    <string name="open_img">Open MTK</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="project_id">gtaimgtool-21668</string>
    <string name="rebuild">Rebuild</string>
    <string name="rebuild_error">Some error during rebuilding…</string>
    <string name="rebuilding">Rebuilding…</string>
    <string name="rename">Rename</string>
    <string name="replace">Replace</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="saaf">SA audio fixer</string>
    <string name="search">Search file..</string>
    <string name="search_menu_title">Search</string>
    <string name="select_all">Select All</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tile">MTK TOOL (%s)</string>
    <string name="txd_tool">TXD Tool</string>
    <string name="unselect_all">Deselect All</string>
    <string name="current_length">Current name length=%s (max=24)</string>
    <string name="android11">Android 11 block access to Data (Android/data) and obb folder for most apps. So you can\'t open files from Data folder more. You must copy files from Data folder to another location first.</string>
    <string name="cant_use_app">You can\'t use app without this permission</string>
    <string name="add_file">Add File(s)</string>
    <string name="add_replace_file">Add File(s) with replace</string>
    <string name="about">About</string>
    <string name="comment_text">Comment</string>
    <string name="all">All</string>
</resources>