<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/maxLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_length"/>
    <EditText
        android:id="@+id/maxName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:enabled="false"
            android:id="@+id/maxOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/maxOk"
            android:layout_weight="1"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/maxCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/maxCancel"
            android:layout_weight="1"
            android:onClick="onClick"/>
    </LinearLayout>
</LinearLayout>
