<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/relativeLayout01"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/fdLinearLayoutList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/fdLinearLayoutSelect"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/fdButtonNew"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nnew"
                    android:layout_weight="0.3"/>
                <Button
                    android:id="@+id/btnAll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:layout_weight="0.3"
                    android:onClick="onAllClick"/>
                <Button
                    android:id="@+id/fdButtonSelect"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/select"
                    android:layout_weight="0.7"/>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:onClick="onCancelClick"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/fdLinearLayoutCreate"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <TextView
                android:id="@+id/textViewFilename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/file_name"/>
            <EditText
                android:id="@+id/fdEditTextFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/fdButtonCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_weight="0.3"/>
                <Button
                    android:id="@+id/fdButtonCreate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    android:layout_weight="0.7"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fdLinearLayoutList">
        <TextView
            android:id="@+id/path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_data"/>
    </LinearLayout>
</RelativeLayout>
